# yannq

./: .gitignore  .gitmodules  CMakeLists.txt  CorrMatTFIP.cpp  GraphState.cpp  HessianExact.hpp  JastrowExact.cpp  JastrowXXZ.cpp  LICENSE  Landscape2d.cpp  LearnRandom.cpp  LoadRBM.cpp  LocalOperator.hpp  LocalSampler.hpp  OverlapOptimizer.hpp  OverlapOptimizerExact.cpp  ProcessCorrmat.hpp  RBMCG.cpp  RBMCorrMat.cpp  RBMCorrMatJ1J2.cpp  RBMCorrMatTFI.cpp  RBMCorrMatXXZ.cpp  RBMExact.cpp  RBMJ1J2.cpp  RBMRot.cpp  RBMSRDiff.cpp  RBMTFI.cpp  RBMTFIPerturb.cpp  RBMTFITest.cpp  RBMXXZ.cpp  RBMXXZGeo.cpp  RBMXXZSto.cpp  RBMXYZ.cpp  README.md  RandomRBM.cpp  RandomState.hpp  RunCalc.hpp  SRMatExact.hpp  SROptimizerCG.hpp  Samples.hpp  (+18 more)
Basis/: BasisJz.hpp
ED/: ConstructSparseMat.hpp  NodeMV.hpp
Examples/: AmplitudePhase.cpp  CMakeLists.txt  RBMExact.cpp  RBMTFI.cpp  RBMTFIExact.cpp  RBMXXZ.cpp  make_tfi_params.py  rbm_to_npy.cpp  tbb_threads.hpp
GroundState/: SRMat.hpp  SRMatExact.hpp
GroundStates/: SRMat.hpp  SRMatExactBasis.hpp
Hamiltonians/: Hamiltonians.hpp  KitaevHex.hpp  NonIntegrable.hpp  TFIPerturb.hpp  TFIsing.hpp  XXXJ1J2.hpp  XXXMG.hpp  XXZ.hpp  XXZSto.hpp  XYZNNN.hpp  XYZNNNRot.hpp
Machines/: Jastrow.hpp  RBM.hpp
Optimizers/: AdaDelta.hpp  AdaMax.hpp  Adam.hpp  ModifiedAdam.hpp  Optimizer.hpp  OptimizerFactory.hpp  RMSProp.hpp  SGD.hpp
Samplers/: HamiltonianSampler.hpp  HamiltonianSamplerOldPT.hpp  HamiltonianSamplerPT.hpp  HamiltonianSweeper.hpp  LocalSweeper.hpp  Sampler.hpp  SamplerPT.hpp  SimpleSampler.hpp  SimpleSamplerPT.hpp  SwapSamplerPT.hpp  SwapSweeper.hpp
Serializers/: SerializeEigen.hpp  SerializeJastrow.hpp  SerializeRBM.hpp
States/: ExactState.hpp  JastrowState.hpp  RBMState.hpp  RBMStateMT.hpp
Supervised/: OverlapOptimizerExact.hpp
Tests/: CMakeLists.txt  HamiltonianHelper.hpp  LayerHelper.hpp  Makefile  TestActivations.cpp  TestAmplitudePhase.cpp  TestAmplitudePhaseTorch.cpp  TestBasisZ2.cpp  TestConvLayer.cpp  TestConvTorch.cpp  TestFeedForward.cpp  TestFullyConnected.cpp  TestHamJ1J2.cpp  TestHamKitaev.cpp  TestHamKitaevC24.cpp  TestHamTFI.cpp  TestHamXXXJ1J2.cpp  TestHamXYZSto.cpp  TestHamXYZSto2.cpp  TestHessian.cpp  TestLogDeriv.cpp  TestMeanLayer.cpp  TestRBM.cpp  TestRBMState.cpp  TestRBMStates.cpp  TestRatio.cpp  TestSerializeActivations.cpp  TestSerializeConv1D.cpp  TestSerializeEigen.cpp  TestSerializeFeedForward.cpp  TestSerializeFullyConnected.cpp  TestSerializeRBM.cpp  TestUtility.cpp  testBasis.cpp  testJastrow.cpp  testNNQS.cpp  testNNQS2.cpp  testNNQS3.cpp
Utilities/: Utility.hpp  tuple_helper.hpp  type_traits.hpp
Yannq/: Yannq.hpp
Yannq/Basis/: Basis.hpp  BasisFull.hpp  BasisJz.hpp
Yannq/ED/: ConstructSparseMat.hpp
Yannq/GroundState/: NGDExact.hpp  SRMat.hpp  SRMatExact.hpp  utils.hpp
Yannq/Hamiltonians/: J1J2.hpp  KitaevHex.hpp  KitaevHexC24.hpp  NonIntegrable.hpp  TFIsing.hpp  XXX.hpp  XXXJ1J2.hpp  XXXMG.hpp  XXZ.hpp  XXZSto.hpp  XYZNNN.hpp  XYZSto.hpp  XYZSto2.hpp
Yannq/Machines/: AmplitudePhase.cpp  AmplitudePhase.hpp  AmplitudePhaseTorch.cpp  CorrelatedRBM.hpp  DNNEngine.hpp  FeedForward.hpp  Jastrow.hpp  Machines.hpp  RBM.hpp
Yannq/Machines/layers/: AbstractLayer.hpp  ActivationLayer.hpp  Conv1D.hpp  Conv1Dnd.hpp  FullyConnected.hpp  Mean.hpp  activations.hpp  layers.hpp
Yannq/Machines/torch_layers/: Conv1D.cpp  Conv2D.cpp  activations.hpp
Yannq/Observables/: ConstructDeltaExact.hpp  Energy.hpp  FisherMatrix.hpp  Observable.hpp  utils.hpp
Yannq/Optimizers/: AdaDelta.hpp  AdaMax.hpp  Adam.hpp  ModifiedAdam.hpp  Optimizer.hpp  OptimizerFactory.hpp  RMSProp.hpp  SGD.hpp  SGDMomentum.hpp
Yannq/Runners/: AbstractRunner.hpp  RunAmplitudePhase.hpp  RunExact.hpp  RunRBM.hpp  RunRBMExact.hpp  filesystem.hpp
Yannq/Samplers/: CD.hpp  ExactSampler.hpp  HamiltonianSweeper.hpp  LocalSweeper.hpp  Sampler.hpp  SamplerMT.hpp  SamplerPT.hpp  SwapSweeper.hpp  SwapSweeperCache.hpp  utils.hpp
Yannq/Serializers/: SerializeActivationLayers.hpp  SerializeAmplitudePhase.hpp  SerializeConv1D.hpp  SerializeCorrelatedRBM.hpp  SerializeEigen.hpp  SerializeFeedForward.hpp  SerializeFullyConnected.hpp  SerializeLayers.hpp  SerializeMean.hpp  SerializeRBM.hpp
Yannq/States/: AmplitudePhaseState.hpp  JastrowState.hpp  RBMState.hpp  RBMStateMT.hpp  RBMStateTBB.hpp  type_traits.hpp  utils.hpp
Yannq/Supervised/: OverlapOptimizer.hpp  OverlapOptimizerExact.hpp
Yannq/Utilities/: Exceptions.hpp  Utility.hpp  type_traits.hpp
docs/: Machines.md  States.md
utils/: port_saved.cpp
