add_executable(RBMTFI "RBMTFI.cpp")
target_link_libraries(RBMTFI stdc++fs yannq)

add_executable(RBMXXZ "RBMXXZ.cpp")
target_link_libraries(RBMXXZ stdc++fs yannq)

add_executable(RBMTFIExact "RBMTFIExact.cpp")
target_link_libraries(RBMTFIExact stdc++fs yannq)

add_executable(AmplitudePhase "AmplitudePhase.cpp")
target_link_libraries(AmplitudePhase yannq)
